// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`File Content Storage 1234: removes private solutions 1`] = `
{
  "interactives": {
    "1": {
      "content.json": "{}",
      "h5p.json": "{"title":"this should be stored in folder 1","mainLibrary":"Test.Library","language":"U","license":"","embedTypes":["iframe"],"preloadedDependencies":[],"defaultLanguage":""}",
      "metadata.json": "{"extra":"Something extra"}",
    },
    "1234": {
      "content.json": "{
  "isSolutionPublic": false,
  "fake": "to make sure it is saved too"
}",
      "h5p.json": "{
  "title": "this should be stored in folder 1234",
  "mainLibrary": "Test.Library",
  "language": "U",
  "license": "",
  "embedTypes": [
    "iframe"
  ],
  "preloadedDependencies": [],
  "defaultLanguage": ""
}",
      "metadata.json": "{
  "attachments": []
}",
    },
    "image-test": {
      "media": {
        "_questions.png": "",
        "detailed.png": "",
        "unreferenced.png": "",
      },
      "metadata.json": "{"attachments":["media/unreferenced.png"]}",
    },
  },
  "private": {
    "interactives": {
      "1234": {
        "content.json": "{
  "questions": [
    "<p>This should not appear in the public folder</p>"
  ]
}",
      },
    },
  },
}
`;

exports[`File Content Storage 12345: leaves public solutions 1`] = `
{
  "interactives": {
    "1": {
      "content.json": "{}",
      "h5p.json": "{"title":"this should be stored in folder 1","mainLibrary":"Test.Library","language":"U","license":"","embedTypes":["iframe"],"preloadedDependencies":[],"defaultLanguage":""}",
      "metadata.json": "{"extra":"Something extra"}",
    },
    "12345": {
      "content.json": "{
  "isSolutionPublic": true,
  "fake": "to make sure it is saved too",
  "questions": [
    "<p>This should appear in the public folder</p>"
  ]
}",
      "h5p.json": "{
  "title": "this should be stored in folder 12345",
  "mainLibrary": "Test.Library",
  "language": "U",
  "license": "",
  "embedTypes": [
    "iframe"
  ],
  "preloadedDependencies": [],
  "defaultLanguage": ""
}",
      "metadata.json": "{
  "attachments": []
}",
    },
    "image-test": {
      "media": {
        "_questions.png": "",
        "detailed.png": "",
        "unreferenced.png": "",
      },
      "metadata.json": "{"attachments":["media/unreferenced.png"]}",
    },
  },
}
`;

exports[`File Content Storage saves content as expected 1`] = `
{
  "interactives": {
    "1": {
      "content.json": "{
  "isSolutionPublic": true
}",
      "h5p.json": "{
  "title": "this should be stored in folder 1",
  "mainLibrary": "Test.Library",
  "language": "U",
  "license": "",
  "embedTypes": [
    "iframe"
  ],
  "preloadedDependencies": [],
  "defaultLanguage": ""
}",
      "metadata.json": "{
  "extra": "Something extra",
  "books": [
    {
      "name": "stax-test",
      "lo": [
        "1-2-3"
      ]
    }
  ],
  "attachments": []
}",
    },
    "1234": {
      "content.json": "{
  "isSolutionPublic": true
}",
      "h5p.json": "{
  "title": "this should be stored in folder 1234",
  "mainLibrary": "Test.Library",
  "language": "U",
  "license": "",
  "embedTypes": [
    "iframe"
  ],
  "preloadedDependencies": [],
  "defaultLanguage": ""
}",
      "metadata.json": "{
  "attachments": []
}",
    },
    "2": {
      "content.json": "{
  "isSolutionPublic": true
}",
      "h5p.json": "{
  "title": "this should be stored in folder 2",
  "mainLibrary": "Test.Library",
  "language": "U",
  "license": "",
  "embedTypes": [
    "iframe"
  ],
  "preloadedDependencies": [],
  "defaultLanguage": ""
}",
      "metadata.json": "{
  "attachments": []
}",
    },
    "image-test": {
      "content.json": "{
  "isSolutionPublic": true,
  "text": "<p>Fill in the missing words</p>\\n        <p><img src=\\"media/test.png\\"/></p>\\n        "
}",
      "h5p.json": "{
  "title": "default title",
  "mainLibrary": "Test.Library",
  "language": "U",
  "license": "",
  "embedTypes": [
    "iframe"
  ],
  "preloadedDependencies": [],
  "defaultLanguage": ""
}",
      "media": {
        "_questions.png": "",
        "detailed.png": "",
        "test.png": "<insert contents of images/not-used.png>",
      },
      "metadata.json": "{
  "attachments": [
    "media/test.png",
    "media/detailed.png",
    "media/_questions.png"
  ],
  "_additional_field": [
    {
      "content": "<img src=\\"media/detailed.png\\"/>",
      "solution_type": "detailed"
    }
  ],
  "_questions": [
    {
      "content": "<p><img src=\\"media/_questions.png\\"/></p>"
    }
  ]
}",
    },
  },
}
`;
